--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,3 @@
-/*
-* Colors 
-* 
-* 
-*/
 html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	padding: 0;
 	border: 0;
@@ -13,27 +8,35 @@ html, body, h1, h2, h3, h4, p, div, ul, li, a {
 	list-style: none;
 	text-decoration: none;
 }
-/**/
+
 @font-face {
-
 }
-/* Responsive */
+
 @media screen and (min-width:600px)  {
+}
 
-}
 body {
-	background: rgb(195, 181, 194);
+	/*background: rgb(195, 181, 194);*/
+	background: black;
 }
+
 .backdrop {
 	width: 100vw;
 	height: 100vh;
-	/*
-	background: url(images/background/starrynightsky.jpg), black;
+
+	/*background: url(images/background/purplenightsky.jpeg), black;*/
+	background: black;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: fixed;
+
+	/*
+	float:left;
+	display:inline-block;
+	clear:both;
 	*/
 }
+
 h1, h2 {
 	text-align: center;
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -43,18 +46,22 @@ h1, h2 {
 	margin-left: 25%;
 	padding-top: 10px;
 }
+
 #deal:hover {
 	cursor: url(), auto;
 }
+
 .buttons img, .buttons input {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 5px;
 }
+
 .buttons img {
 	height: 200px;
 }
+
 .buttons input {
 	margin-bottom: 20px;
 	background-color: transparent;
@@ -66,12 +73,14 @@ h1, h2 {
 	padding-right: 20px;
 	border: 2px solid black;
 }
+
 #hand img {
 	margin: 7px;
 	height: 225px;
 	border: 10px solid rgb(255, 255, 255);
 	border-radius: 10px;
 }
+
 .orientationDown {
 	transform: rotate(180deg);
 }
